# projekt_hacknation

./: README.md  package-lock.json
backend/: .ai.py.un~  .app.py.un~  .pyproject.toml.un~  ai.py  ai.py~  app.py  app.py~  dane.xml.txt  gen_csv.py  gen_xml.py  hackathon_data.db  pyproject.toml  pyproject.toml~  seed.py  seed_history.py  test.nu  test.py
backend/api/: db.py  lost_item.py  office_account.py  schema.py
backend/cache/: cache.py
backend/notebooks/: pipeline.ipynb
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Form.jsx  Login.jsx
