[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flasgger>=0.9.7.1",
    "flask>=3.1.2",
    "jsonschema>=4.25.1",
    "num2words>=0.5.14",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "transformers>=4.57.3",
]

